--- a/ARTS-2018-07-08.md
+++ b/ARTS-2018-07-08.md
@@ -43,13 +43,13 @@ implement ：
 
 
 
-#Technique
+# Technique
 
 几种比较优雅的单例模式：
 
 （1）双检锁（懒汉）
 
-```
+```java
 private volatile static DoubleCheckSingleton instance;
 
     public static DoubleCheckSingleton getInstance(){
@@ -76,7 +76,7 @@ private volatile static DoubleCheckSingleton instance;
 
 （2）静态内部类（懒汉）
 
-```
+```java
    public static StaicNestedSingleton get() {
         return Holder.instance;
     }
@@ -88,7 +88,7 @@ private volatile static DoubleCheckSingleton instance;
 
 （3）直接静态单例（饿汉）
 
-```
+```java
 private final static  SimpleSingleton ourInstance = new SimpleSingleton();
 
     public static SimpleSingleton getInstance() {
@@ -100,7 +100,7 @@ private final static  SimpleSingleton ourInstance = new SimpleSingleton();
 
 （4）枚举（饿汉）
 
-```
+```java
 public enum EnumSingleton {
 
     SINGLETON;
