--- a/ARTS-2018-07-15.md
+++ b/ARTS-2018-07-15.md
@@ -2,6 +2,10 @@
  [Algorithm](#Algorithm)
 
 
+
+
+
+
 # Review
 
 
@@ -151,7 +155,10 @@ public void println(String x) {
 
 
 
+# Algorithm
 
+
+111
 
 
 
