--- a/ARTS-2018-07-15.md
+++ b/ARTS-2018-07-15.md
@@ -1,13 +1,27 @@
 
- <h1>[Algorithm](#algorithm)</h1>
+ [Algorithm](#algorithm)
+
+ [Review](#review)
+
+ [Technique](#technique)
+
+ [Share](#share)
 
 
+# Algorithm
 
 
 
 
 
 # Review
+
+[loop-doesnt-see-changed-value-without-a-print-statement](https://stackoverflow.com/questions/25425130/loop-doesnt-see-changed-value-without-a-print-statement)
+
+这个stackoverflow问题主要描述了，为什么在一些情况下，即使没有volatile，synchronized，atomic等同步工具，一个共享变量也能跨线程
+具有可见性，这里面主要因为特定的场景下存在了happens-before关系导致的，虽然结果正确，但那种编写代码的方式确是不正确的，
+任何时候，我们都应该合理的使用同步来解决共享变量的可见性问题。
+
 
 
 
@@ -156,10 +170,7 @@ public void println(String x) {
 
 
 
-# Algorithm
 
-
-111
 
 
 
