--- a/ARTS-2018-07-15.md
+++ b/ARTS-2018-07-15.md
@@ -11,6 +11,62 @@
 # Algorithm
 
 
+（Reverse Integer）[https://leetcode.com/articles/reverse-integer/]
+
+```java
+
+        long temp=x;
+
+        if(x<0){
+            temp = temp * -1;
+        }
+
+       StringBuilder sb=new StringBuilder(String.valueOf(temp));
+        long value=Long.parseLong(sb.reverse().toString());
+        if(value>Integer.MAX_VALUE){
+            return 0;
+        }
+
+        if (x<0){
+          return (int)value * -1;
+
+        }
+
+        return  (int)value;
+```
+
+自己发明的一种写法，与网上大部分例子不一样，效率还可以beat 98% ，简单分析一下处理思路：
+
+首先要把int的值赋给long变量，防止后面的操作溢出，尤其是如果传进来的值是负数的边界值，那么负负相乘是不会变成正数的，直接导致在Long.parse时候
+失败，在转成正数之后，我们把值赋值给字符串类，然后利用reverse方法，直接反转，反转之后判断这个值是否大于int的最大值也就是会不会溢出，如果
+会就返回0，如果不会再判断这个数原来是不是负数，如果是的话就在乘以-1还原回去，最终转成int返回。
+
+这里反转主要利用了字符串的便利方法，如果不利用这个我们可以通过除法和求模运算来间接得到，需要注意的是这中方法需要声明一个long变量
+来存储反转后的值，代码也比较间接，性能也不错，我就不在分析了
+
+```java
+
+        int temp=x;
+
+        if (x<0){
+            temp=x* -1;
+        }
+
+        long reverse=0;
+
+        while (temp>0){
+            reverse=reverse*10+ temp%10;
+            temp=temp/10;
+        }
+
+        if(reverse>Integer.MAX_VALUE) return 0;
+
+        if(x<0) return (int)reverse* -1;
+
+
+        return (int)reverse;
+```
+
 
 
 
