修改错别字

--- a/ARTS-2018-07-15.md
+++ b/ARTS-2018-07-15.md
@@ -42,7 +42,7 @@
 会就返回0，如果不会再判断这个数原来是不是负数，如果是的话就在乘以-1还原回去，最终转成int返回。
 
 这里反转主要利用了字符串的便利方法，如果不利用这个我们可以通过除法和求模运算来间接得到，需要注意的是这中方法需要声明一个long变量
-来存储反转后的值，代码也比较间接，性能也不错，我就不在分析了
+来存储反转后的值，代码也比较简洁，性能也不错，我就不在分析了
 
 ```java
 
