添加技术总结

--- a/ARTS-2018-07-15.md
+++ b/ARTS-2018-07-15.md
@@ -83,6 +83,20 @@
 
 # Technique
 
+[https://javarevisited.blogspot.com/2015/07/how-to-use-wait-notify-and-notifyall-in.html]
+[https://javarevisited.blogspot.com/2013/12/inter-thread-communication-in-java-wait-notify-example.html]
+[https://javarevisited.blogspot.com/2011/05/wait-notify-and-notifyall-in-java.html]
+
+这几篇文章主要介绍了Java里面关于wait，notify，notifyAll相关的使用例子和一些常见的问题如：
+
+（1）为什么他们定义在Object类中，而不是Thread类中？
+
+（2）为什么他们必须出现在同步方法中或者同步块中？
+
+（3）为什么需要使用while语句代替if语句来判断条件状态？
+
+这里我总结了一篇文章，感兴趣可点击[链接](https://mp.weixin.qq.com/s?__biz=MzAxMzE4MDI0NQ==&mid=2650336045&idx=1&sn=77e202b4ccc8a5a937c5c3188330c32b&chksm=83aac717b4dd4e0154bedfe427b06e6df1b224fe590fab20f737494014c04516191a2b5f7779#rd)
+
 
 # Share
 
