--- a/ARTS-2018-07-15.md
+++ b/ARTS-2018-07-15.md
@@ -184,7 +184,7 @@ display(a);
 ```
 如果c的值打印3，那么即使a和b没有volatile修饰，那么线程B里面也可以访问到其最新的变化分别是2和1，因为根据happens-before关系，如果线程A的写操作发生在线程B的读操作之前，那么写操作之前的所有的数据都会同步到内存，然后在屏障后的读操作会从主内存读取所有的最新的数据，所以a和b的值也会被另外一个线程可见，这其实一定程度上增强了volatile关键字的作用。
 
-在java里面，我们都知道synchronized关键字拥有volatile关键字所有的功能，那么他们有一样的影响，接着我们分析上一个例子，因为jit的优化，上面的循环语句：
+在java里面，我们都知道synchronized关键字拥有volatile关键字所有的功能，那么他们有一样的影响，接着我们分析上一个例子，因为jit的优化，如果没有happens-before关系，上面的循环语句：
 
 ```java
        while (flag){
@@ -211,8 +211,7 @@ display(a);
     }
 ```
 
-这样一来flag变量和synchronized同步块就具有happens-before关系了，首先被禁用重排序，其次当第一次同步块执行完毕之后，会被flush到主内存里面，接着在同步块之后再访问这个变量，就会从主内存加载，这样以来相当于有了可见性，即使是这里没有volatile关键字，所以我们的结果才可以正常停止，同理第一个例子里面println语句在JDK源码里面也是同步的：
-
+如果被优化成这样，那么就不具有可见性了，正因为下面同步块的出现，才禁止了这种优化，因为同步块和volatile有一样的作用，所以具有增强的同步效果，在同步之前的代码，实际上是会从主内存加载的，所以flag变量即使没有volatile修饰，也有可见性了。下面我们看下println语句的源码，会发现它里面也有同步块：
 ```java
 public void println(String x) {
     synchronized (this) {
