--- a/ARTS-2018-07-29.md
+++ b/ARTS-2018-07-29.md
@@ -17,7 +17,7 @@
 
 # Review
 
-[http://www.byteslounge.com/tutorials/read-write-locks-in-java-reentrantreadwritelock](关于Java里面的读写锁)
+[关于Java里面的读写锁](http://www.byteslounge.com/tutorials/read-write-locks-in-java-reentrantreadwritelock)
 
 
 ### 前言
