--- a/ARTS-2018-07-29.md
+++ b/ARTS-2018-07-29.md
@@ -10,6 +10,56 @@
 
 # Algorithm
 
+[Flipping an Image](https://leetcode.com/problems/flipping-an-image/description/)
+
+翻转图像需求描述：
+
+给定一个二维数组，遍历每一行，先反转每个数组，然后取每个元素判断，如果是0则修改为1，如果为1则修改为0
+
+算法重点在于如何反转数组。
+
+Java版实现：
+
+```
+   public static int[][] flipAndInvertImage(int[][] ab) {
+
+        filp2(ab);
+        invert(ab);
+
+        return ab;
+    }
+
+    /***
+     * beetter
+     * @param a
+     */
+    static void filp2(int a[][]){
+
+        for (int i = 0; i <a.length ; i++) {
+            int array[]=a[i];
+            int n=array.length;
+            for (int j = 0; j <n/2 ; j++) {
+                int temp=array[j];
+                array[j]=array[n-1-j];
+                array[n-1-j]=temp;
+            }
+
+        }
+
+
+    }
+
+    static void invert(int [][]ab){
+        for (int i = 0; i <ab.length ; i++) {
+
+            for (int j=0; j <ab[i].length; j++) {
+                // 得到每一列
+                ab[i][j]=ab[i][j]==0?1:0;
+            }
+
+        }
+    }
+```
 
 
 
