--- a/2018/08/ARTS-2018-08-05.md
+++ b/2018/08/ARTS-2018-08-05.md
@@ -10,6 +10,36 @@
 
 # Algorithm
 
+Array Partition Sum
+
+重点在于排序算法，开始我使用冒泡排序发现时间总是超时，后来使用了JDK自带的快速排序算法，性能才更好：
+
+```java
+    public static int arrayPairSum(int[] nums) {
+       Arrays.sort(nums);
+        return  getSum(nums);
+    }
+
+
+    public  static  int getSum(int[] nums){
+        int sum=0;
+        for(int i=0;i<nums.length;i=i+2){
+            sum=sum+nums[i];
+        }
+        return sum;
+    }
+
+    public static void main(String[] args) {
+
+        int [] nums={-1,4,3,2,6,8};
+
+        System.out.println(getSum(nums));
+
+    }
+```
+
+
+
 
 
 
