arts添加review和技术相关部分的内容

--- a/2018/08/ARTS-2018-08-12.md
+++ b/2018/08/ARTS-2018-08-12.md
@@ -17,10 +17,283 @@
 
 # Review
 
+https://docs.oracle.com/javase/8/docs/api/
+
+LockSupport是并发工具包中的一个辅助类，在直接的开发过程中很少直接使用，但是它的身影已经遍布各种工具类，众所周知，AbstractQueuedSynchronizer简称（AQS）是Java并发包的基石之一，很多很实用的工具类，如下：
+
+```
+ReentrantLock
+ReadLock
+WriteLock
+Semaphore
+CountDownLatch
+```
+都是采用AbstractQueuedSynchronizer辅助构建的，而在AbstractQueuedSynchronizer类中却大量采用了LockSupport来操作各种锁的状态，所以我们很有必要来了解学习这个类。
+
+
+
+LockSupport的原理是，它最多只允许有一个许可证令牌（permit），如果线程可以得到这个令牌，那么他就能继续运行下去，否则将会处于阻塞状态，注意此时对应的线程状态是WAITTING不是BLOCKED这个后面我们在细说，先来看下这个类的几个方法：
+
+
+```
+park()
+park(Object blocker)
+parkNanos(long nanos)
+parkNanos(Object blocker, long nanos)
+parkUntil(long deadline)
+parkUntil(Object blocker, long deadline)
+
+unpark(Thread thread)
+
+getBlocker(Thread t)
+```
+
+（一）park系列的方法
+
+其中park前缀开头的方法，是用来获取许可证的，如果当前线程的许可证令牌存在1个，那么调用park相关方法的线程会立马返回继续执行，同时许可证个数就变成0个，如果再继续调用park方法，那么当前线程就会阻塞处于等待状态（WAITTING），除非有以下几种情况，才会被唤醒：
+
+（1）任何其他的线程对该线程对象调用了unpark方法，归还了令牌，那么就会解除等待。这里需要注意令牌最多只会有一个，多次调用unpark方法令牌个数是不会随之累加的。
+
+（2）任何其他的线程，对该线程调用了interrupt方法，打断了线程
+
+（3）由于硬件操作系统不可预知的原因，导致了虚假唤醒
+
+（4）调用了下面的一系列方法，可以在时间过期后自动唤醒。
+
+```
+parkNanos(long nanos)
+parkNanos(Object blocker, long nanos)
+parkUntil(long deadline)
+parkUntil(Object blocker, long deadline)
+
+```
+
+所以park方法，常用的编程模板是：
+
+```
+ while (!canProceed()) {
+  LockSupport.park(this);
+ }
+```
+这里面while循环的作用，就是为了避免虚假唤醒的情况，此外在配合使用自旋锁的时候，park方法可以使得当前线程进入等待状态，从而可以避免大量自旋导致的cpu资源的浪费。
+
+（二）unpark方法
+
+调用这个方法，可以保证归还一个许可证令牌，从而保证下次调用park方法的线程可以直接立即返回运行，这里需要注意的是对于一个没有启动的线程，这里不保证有任何影响。
+
+（三）关于park和getBlocker方法的对象参数的作用
+
+
+```
+park(Object blocker)
+getBlocker(Thread t)
+```
+
+
+park方法的blocker参数的作用是可以传入一个对象，记录一些监控信息，这样当线程处于阻塞时候，我们可以调用getBlocker方法读取这个对象，从而获取这个阻塞线程的一些情况，注意这里获取的仅仅是最后一次park的对象信息，因为park方法可以调用无数次，所以这里只能保证获取最新的自定义的对象监控信息。
+
+
+
+（四）使用例子
+
+关于park和unpark一般都是成对出现的，下面看一个oracle官网给的使用LockSupport做的一个公平队列锁的代码：
+
+```
+    private final AtomicBoolean locked = new AtomicBoolean(false);
+    private final Queue<Thread> waiters = new ConcurrentLinkedQueue<Thread>();
+
+    public void lock() {
+        boolean wasInterrupted = false;
+        Thread current = Thread.currentThread();
+        //先把自己加到队列里面
+        waiters.add(current);
+
+        // Block while not first in queue or cannot acquire lock
+        //peek取出头元素但不移除，判断头元素是否等当前线程 ，如果不是当前元素，直接进入循环
+        //如果头不是当前线程，那么判断CAS指令，如果成功直接执行代码，否则进入循环阻塞
+        while (waiters.peek() != current || !locked.compareAndSet(false, true)) {
+            LockSupport.park(this);
+            if (Thread.interrupted()) // ignore interrupts while waiting
+                wasInterrupted = true;
+        }
+
+        waiters.remove();
+        if (wasInterrupted)          // reassert interrupt status on exit
+            current.interrupt();
+    }
+
+    public void unlock() {
+        locked.set(false);
+        LockSupport.unpark(waiters.peek());
+    }
+```
+
+
+（五）相关问题
+
+
+（1）park和unpark方法在官网说明书里面并没有提到它们有happends-before关系，所以这里不能依赖它们保证相关的原子性，可见性和有序性。
+
+（2）park调用会导致当前的线程处于WAITTING或者WAITTING_TIMED状态，当调用unpark方法时并不会立即进入RUNNABLE状态，而是看当前有没有线程已经占用锁，如果有它们会先变成BLOCKED状态，然后在变成RUNNABLE状态
+
+（3）WAITTING与BLOCKED状态的区别，简单的理解WAITTING一般需要有人通知才能唤醒，而BLOCKED通常是只要对象的锁没人占用就可以继续运行，如果有人占用则进入BLOCKED阻塞
+
+（4）LockSupport类一般不会直接出现在代码里，绝大多数时候我们只需要使用AbstractQueuedSynchronizer这个封装好的工具框架类即可。
+
+
+
+
+总结：
+
+本文详细的介绍了LockSupport工具类的方法api和功能说明，并且分析了该类的相关注意事项和问题，由于该类是AQS框架的一个重要组成部分，所以我们很有必要去清晰的掌握和了解它。
+
+
+
+
+
+
+
+
 
 
 
 # Technique
+
+
+### 关于ThreadLocal
+
+ThreadLocal类并不java并发包里面的一个类，而是java.lang包里面的一个使用频次并不是非常高的一个类，尽量它不在并发包里面，但它的设计用途却可以用来规避一些同步问题：
+
+其提供了一个线程副本的成员变量，从而在一些情况下可以巧妙避开并发问题。我们知道在多线程情况下对共享变量的修改，如果不采用任何同步策略，那么结果很大的概率上都会发生错误，这个主要是由于线程的CPU的cache与主内存的变量视图不一致导致的。
+
+除了采用加锁同步之外，在一些特定的情况下，我们可以使用ThreadLocal来修饰成员变量，从而给每一个线程维持绑定一个自己的副本变量，这样以来不论何时都只有本线程可以修改它，所以就不存在并发问题。
+
+### ThreadLocal的常用方法
+
+
+```
+get():  读取当前线程在ThreadLocal里面的变量数据，不同的线程看到的变量是隔离的
+set(T value): 向当前线程中放入或修改变量数据
+initialValue():  初始化方法，可以给变量赋值指定的一个值，如果不初始化，那么就是null
+remove(): 移除当前线程在ThreadLocal里面的实例
+```
+### ThreadLocal使用场景
+
+
+
+  （1）每个线程都需要维护一个自己专用的线程的上下文变量，比如计数器，jdbc链接，web开发里面的session，事务id等。
+
+
+  （2）包装一个线程不安全的成员变量，给其提供一个线程安全的环境，比如Java里面的SimpleDateFormat是线程不安全的，所以在多线程下使用可以采用ThreadLocal包装，从而提供安装的访问。
+
+
+  （3）对于一些线程级别，传递方法参数有许多层的时候，我们可以使用ThreadLocal包装，只在特定地方set一次，然后不管在什么地方都可以随便get出来，从而巧妙了避免了多层传参。
+
+
+
+  ### ThreadLocal例子
+
+
+
+  (1)线程计数器，每个线程内有自己的线程计数器，不需要加锁和同步
+
+
+```
+ static final ThreadLocal counter=new ThreadLocal();
+
+    public static void main(String[] args) {
+
+
+        Runnable runnable=new Runnable() {
+            @Override
+            public void run() {
+
+                for (int i = 0; i <10 ; i++) {
+
+                    counter.set(i);
+                    try {
+                        Thread.sleep(1000);
+                        System.out.println(Thread.currentThread().getName()+" 打印"+counter.get() );
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+
+            }
+        };
+
+
+
+
+        Thread t1=new Thread(runnable,"线程1");
+        Thread t2=new Thread(runnable,"线程2");
+        Thread t3=new Thread(runnable,"线程3");
+
+
+        t1.start();
+        t2.start();
+        t3.start();
+
+
+    }
+```
+
+
+（2）线程id生成器
+
+
+```
+ import java.util.concurrent.atomic.AtomicInteger;
+
+ public class ThreadId {
+     // Atomic integer containing the next thread ID to be assigned
+     private static final AtomicInteger nextId = new AtomicInteger(0);
+
+     // Thread local variable containing each thread's ID
+     private static final ThreadLocal<Integer> threadId =
+         new ThreadLocal<Integer>() {
+             @Override protected Integer initialValue() {
+                 return nextId.getAndIncrement();
+         }
+     };
+
+     // Returns the current thread's unique ID, assigning it if necessary
+     public static int get() {
+         return threadId.get();
+     }
+ }
+```
+
+
+
+
+### ThreadLocal的原理
+
+
+
+ThreadLocal的原理内部可以理解成是一个map对象，它的key可以理解成是线程本身，value就是我们存的对象，所以在多线程场景下，每个线程操作的都是自己对应的变量，所以不会存在并发冲突问题。
+
+
+需要ThreadLocal并不是替换Java里面同步操作的，它的使用场景非常有限，在一定特定的情况下可以发挥比较棒的作用，比如在Spring和Hibernate框架中就大量采用了ThreadLocal来保存事务会话。但有优点就必有缺点。ThreadLocal使用不当会造成内存泄漏，尽管ThreadLocalMap的Key对象继承了WeakReference 对象，能够确保在内存空间不足的时候来回收对象，但这仅仅是Map的key，而我们的Value值其实是强引用，所以在一个线程生命周期结束的时候，如果调用remove方法来移除本身，那么就可能会造成内存泄漏，这一点需要注意。
+
+所以最好的避免内存泄漏的办法是在线程结束之前，手动调用remove方法或者set（null），从而移除ThreadLocal的key对象或者将key对象设置为null，这样以来就比较优雅的避免了内存泄漏的问题。
+
+
+
+
+
+### 总结
+
+
+
+本文主要介绍了Java里面ThreadLocal类的作用，概念及使用场景和缺点，尽管在日常开发中这个类很少被使用，但其在特定的场景下可以非常巧妙的避免并发问题，比如在上一篇文章中，我们提到了Java里面高级自旋锁CLH和MCS的实现都采用了
+ThreadLocal变量来保存链表的节点，从而避免了使用synchronized或者lock来保护临界区资源，提高了程序性能。
+
+
+
+参考文章：
+
+https://doanduyhai.wordpress.com/2011/12/04/threadlocal-explained/
 
 
 
