--- a/2018/08/ARTS-2018-08-12.md
+++ b/2018/08/ARTS-2018-08-12.md
@@ -10,6 +10,26 @@
 
 # Algorithm
 
+Transpose Matrix
+
+```java
+        int [][]A={ {1,2,3},{4,5,6}   };
+
+
+        int rows=A.length;
+        int cols=A[0].length;
+
+        int data2[][]=new int[cols][rows];
+
+        for (int i = 0; i <cols ; i++) {
+            for (int j = 0; j <rows ; j++) {
+                data2[i][j]=A[j][i];
+            }
+        }
+
+
+        System.out.println(Arrays.deepToString(data2));
+```
 
 
 
