Middle of the Linked List算法

--- a/2018/08/ARTS-2018-08-19.md
+++ b/2018/08/ARTS-2018-08-19.md
@@ -10,6 +10,22 @@
 
 # Algorithm
 
+Middle of the Linked List
+
+```
+    public ListNode middleNode(ListNode head) {
+
+        int count=0;
+        ListNode nodes[]=new ListNode[100];
+        ListNode node;
+        for(node=head;node!=null;node=node.next){
+            nodes[count]=node;
+            count++;
+        }
+
+        return nodes[count/2];
+    }
+```
 
 # Review
 
