反转单个链表

--- a/2018/08/ARTS-2018-08-26.md
+++ b/2018/08/ARTS-2018-08-26.md
@@ -10,6 +10,26 @@
 
 # Algorithm
 
+reverse_singlylinklist_algorithm:
+
+```
+  private ListNode reverse(ListNode head){
+
+      ListNode tmp=head;
+      ListNode prev=null;
+      ListNode current=null;
+      while (tmp!=null){
+          current =tmp;
+          tmp=tmp.next;
+          current.next=prev;
+          prev=current;
+      }
+      return current;
+
+  }
+
+```
+
 
 # Review
 
