--- a/2018/09/ARTS-2018-09-02.md
+++ b/2018/09/ARTS-2018-09-02.md
@@ -9,6 +9,26 @@
 
 
 # Algorithm
+使用递归合并两个排序好的有序数组
+
+```
+
+    public static ListNode mergeSortedList(ListNode l1,ListNode l2){
+        if(l1==null) return l2;
+        if(l2==null) return l1;
+
+        if(l1.val<l2.val){
+            l1.next=mergeSortedList(l1.next,l2);
+            return l1;
+        }else{
+            l2.next=mergeSortedList(l2.next,l1);
+            return l2;
+        }
+
+
+    }
+
+```
 
 
 # Review
