9月第二周的arts提交

--- a/2018/09/ARTS-2018-09-09.md
+++ b/2018/09/ARTS-2018-09-09.md
@@ -5,7 +5,7 @@
 
  [Technique](#technique)
 
- [Share(理解另类的并发安全实现CopyOnWriteArrayList)](#share)
+ [Share：理解另类的并发安全实现CopyOnWriteArrayList ](#share)
 
 
 # Algorithm
