添加20180909的arts作业

--- a/2018/09/ARTS-2018-09-09.md
+++ b/2018/09/ARTS-2018-09-09.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm：Remove Duplicates from Sorted List](#algorithm)
 
  [Review：理解Java7和8里面HashMap+ConcurrentHashMap的扩容策略](#review)
  
@@ -9,6 +9,22 @@
 
 
 # Algorithm
+对排序好的链表移除重复元素
+```
+    public ListNode deleteDuplicates(ListNode head) {
+        
+         ListNode currentNode=head;
+        while (currentNode!=null&&currentNode.next!=null){
+          if(currentNode.val==currentNode.next.val){
+              currentNode.next=currentNode.next.next;
+          }else {
+              currentNode=currentNode.next;
+          }
+        }
+        return head;
+    }
+```
+
 
 
 # Review
